--- a/_layouts/aboutMe.html
+++ b/_layouts/aboutMe.html
@@ -5,9 +5,9 @@ layout: default
 <div class="About Me">
   {{ content }}
 
-  <ul class="post-list">
+  <ul class="psot-list">
     {% for post in site.posts %}
-    {% if post.project != null %}
+    {% if post.aboutMe != null %}
         <li>        <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>      </li>
     {% endif %}
     {% endfor %}
