--- a/_layouts/deafault.html
+++ b/_layouts/deafault.html
@@ -20,6 +20,10 @@
         <header>
           <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
           <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+	  	<a href="https://ltw10.github.io" class="btn">Home</a>
+      	  	<a href="https://ltw10.github.io/aboutMePersonal" class="btn">About Me (Personal)</a>
+		<a href="https://ltw10.github.io/aboutMeProfessional" class="btn">About Me (Professional)</a>
+      	  	<a href="https://ltw10.github.io/Projects" class="btn">Projects</a>
         </header>
         <section id="downloads" class="clearfix">
           {% if site.show_downloads %}
