--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,13 +20,10 @@
         <header>
           <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
           <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-        </header>
         <section id="downloads" class="clearfix">
           {% if site.show_downloads %}
-		<a href="https://ltw10.github.io" class="btn">Home</a>
-      	  	<a href="https://ltw10.github.io/aboutMePersonal" class="btn">About Me (Personal)</a>
-		<a href="https://ltw10.github.io/aboutMeProfessional" class="btn">About Me (Professional)</a>
-      	  	<a href="https://ltw10.github.io/Projects" class="btn">Projects</a>
+		<a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
+       	 	<a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
           {% endif %}
 	{% if site.github.public %}
 	  {% if site.github.is_project_page %}
@@ -35,6 +32,14 @@
           <a href="{{ site.github.owner_url }}" id="view-on-github" class="button"><span>View on GitHub</span></a>
 	  {% endif %}
 	{% endif %}
+		
+		<a href="https://ltw10.github.io" class="btn">Home</a>
+      		<a href="https://ltw10.github.io/aboutMePersonal" class="btn">About Me (Personal)</a>
+		<a href="https://ltw10.github.io/aboutMeProfessional" class="btn">About Me (Professional)</a>
+      		<a href="https://ltw10.github.io/Projects" class="btn">Projects</a>
+		
+	</header>
+		
         </section>
         <hr>
         <section id="main_content">
