--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,10 @@
       <div class="inner">
 
         <header>
+		<p><a href="https://ltw10.github.io" class="btn">Home</a>
+      		<a href="https://ltw10.github.io/aboutMePersonal" class="btn">About Me (Personal)</a>
+		<a href="https://ltw10.github.io/aboutMeProfessional" class="btn">About Me (Professional)</a>
+			<a href="https://ltw10.github.io/Projects" class="btn">Projects</a></p>
           <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
           <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
         <section id="downloads" class="clearfix">
@@ -32,11 +36,6 @@
           <a href="{{ site.github.owner_url }}" id="view-on-github" class="button"><span>View on GitHub</span></a>
 	  {% endif %}
 	{% endif %}
-		
-		<a href="https://ltw10.github.io" class="btn">Home	</a>
-      		<a href="https://ltw10.github.io/aboutMePersonal" class="btn">About Me (Personal)	</a>
-		<a href="https://ltw10.github.io/aboutMeProfessional" class="btn">About Me (Professional)	</a>
-      		<a href="https://ltw10.github.io/Projects" class="btn">Projects		</a>
 		
 	</header>
 		
