--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 		<p><a href="https://ltw10.github.io" class="btn">Home</a></p>
 		<p><a href="https://ltw10.github.io/aboutMePersonal" class="btn">About Me (Personal)</a></p>
 		<p><a href="https://ltw10.github.io/aboutMeProfessional" class="btn">About Me (Professional)</a></p>
-		<p><a href="https://ltw10.github.io/Projects" class="btn">Projects</a></p>
+		<p><a href="https://ltw10.github.io/projects" class="btn">Projects</a></p>
           <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
           <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
         <section id="downloads" class="clearfix">
