--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,18 +24,7 @@
 		<p><a href="https://ltw10.github.io/projects" class="btn">Projects</a></p>
           <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
           <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-        <section id="downloads" class="clearfix">
-          {% if site.show_downloads %}
-		<a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-       	 	<a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
-          {% endif %}
-	{% if site.github.public %}
-	  {% if site.github.is_project_page %}
-          <a href="{{ site.github.repository_url }}" id="view-on-github" class="button"><span>View on GitHub</span></a>
-	  {% else %}
-          <a href="{{ site.github.owner_url }}" id="view-on-github" class="button"><span>View on GitHub</span></a>
-	  {% endif %}
-	{% endif %}
+		<h2> University of Kentucky Class of 2023 Computer Science </h2>
 		
 	</header>
 		
