--- a/_layouts/aboutMe.html
+++ b/_layouts/aboutMe.html
@@ -12,5 +12,10 @@ layout: default
     {% endif %}
     {% endfor %}
   </ul>
+          </section>
+        <hr>
+        <section id="main_content">
+          {{ content }}
+        </section>
   
 </div>
