--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -12,5 +12,8 @@ layout: default
     {% endif %}
     {% endfor %}
   </ul>
+  <a href="https://ltw10.github.io/projects/personalWebsite.html" style="btn">Github Personal Website</a>
+<a href="https://ltw10.github.io/projects/pingPongBallLauncher.html" style="btn">Ping Pong Ball Launcher</a>
+<a href="https://ltw10.github.io/projects/pokerGame.html" style="btn">Poker Game</a>
   
 </div>
