--- a/_layouts/aboutMe.html
+++ b/_layouts/aboutMe.html
@@ -4,6 +4,7 @@ layout: default
 
 <div class="About Me">
   {{ content }}
+  <h1> Luke Williams </h1>
 
   <ul class="psot-list">
     {% for post in site.posts %}
