--- a/_layouts/aboutMe.html
+++ b/_layouts/aboutMe.html
@@ -4,7 +4,9 @@ layout: default
 
 <div class="About Me">
   {{ content }}
-  <h1> Luke Williams </h1>
+  <header>
+    <h1> Luke Williams </h1>
+  </header>
 
   <ul class="psot-list">
     {% for post in site.posts %}
