--- a/_layouts/aboutMe.html
+++ b/_layouts/aboutMe.html
@@ -1,12 +1,10 @@
 ---
 layout: default
+description: Luke Williams
 ---
 
 <div class="About Me">
   {{ content }}
-  <header>
-    <h1> Luke Williams </h1>
-  </header>
 
   <ul class="psot-list">
     {% for post in site.posts %}
