--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,10 @@
       <div class="inner">
 
         <header>
-		<p><a href="https://ltw10.github.io" class="btn">Home</a></p>
-		<p><a href="https://ltw10.github.io/aboutMePersonal" class="btn">About Me (Personal)</a></p>
-		<p><a href="https://ltw10.github.io/aboutMeProfessional" class="btn">About Me (Professional)</a></p>
-		<p><a href="https://ltw10.github.io/projects" class="btn">Projects</a></p>
+		<p><a href="https://ltw10.github.io" class="button">Home</a></p>
+		<p><a href="https://ltw10.github.io/aboutMePersonal" class="button">About Me (Personal)</a></p>
+		<p><a href="https://ltw10.github.io/aboutMeProfessional" class="button">About Me (Professional)</a></p>
+		<p><a href="https://ltw10.github.io/projects" class="button">Projects</a></p>
 		<h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
           	<h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
 		<h2> University of Kentucky Class of 2023 Computer Science </h2>
