--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -18,11 +18,10 @@
       <div class="inner">
 
         <header>
-		<a href="https://ltw10.github.io" class="button">Home</a>
-		<a href="https://ltw10.github.io/projects" class="button">Projects</a>
-		<a href="https://ltw10.github.io/aboutMePersonal" class="button">About Me (Personal)</a>
-		<a href="https://ltw10.github.io/aboutMeProfessional" class="button">About Me (Professional)</a>
-		<br /><br /><br /><br /><br /><br />
+		<p><a href="https://ltw10.github.io">Home</a></p>
+		<p><a href="https://ltw10.github.io/projects">Projects</a></p>
+		<p><a href="https://ltw10.github.io/aboutMePersonal">About Me (Personal)</a></p>
+		<p><a href="https://ltw10.github.io/aboutMeProfessional">About Me (Professional)</a></p>
 		<h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
           	<h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
 		<h2> University of Kentucky Class of 2023 Computer Science </h2>
