--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-		<p><a href="https://ltw10.github.io">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<p><a href="https://ltw10.github.io">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="https://ltw10.github.io/projects">Projects</a><br />
 		<a href="https://ltw10.github.io/aboutMePersonal">About Me (Personal)</a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="https://ltw10.github.io/aboutMeProfessional">About Me (Professional)</a></p>
