--- a/_layouts/aboutMe.html
+++ b/_layouts/aboutMe.html
@@ -18,8 +18,13 @@
       <div class="inner">
 
         <header>
-          <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-          <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+            <p><a href="https://ltw10.github.io">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		        <a href="https://ltw10.github.io/projects">Projects</a><br />
+		        <a href="https://ltw10.github.io/aboutMePersonal">About Me (Personal)</a>&nbsp;&nbsp;&nbsp;&nbsp;
+		        <a href="https://ltw10.github.io/aboutMeProfessional">About Me (Professional)</a></p>
+		        <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+          	<h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+		        <h2> University of Kentucky Class of 2023 Computer Science </h2>
         </header>
  
         </section>
