--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,9 @@
       <div class="inner">
 
         <header>
-		<a href="https://ltw10.github.io" class="button">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="https://ltw10.github.io/projects" class="button">Projects</a><br />
-		<a href="https://ltw10.github.io/aboutMePersonal" class="button">About Me (Personal)</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="https://ltw10.github.io" class="button">Home</a>
+		<a href="https://ltw10.github.io/projects" class="button">Projects</a>
+		<a href="https://ltw10.github.io/aboutMePersonal" class="button">About Me (Personal)</a>
 		<a href="https://ltw10.github.io/aboutMeProfessional" class="button">About Me (Professional)</a>
 		<br /><br /><br /><br /><br /><br />
 		<h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
