--- a/_layouts/aboutMe.html
+++ b/_layouts/aboutMe.html
@@ -23,7 +23,8 @@
 		        <a href="https://ltw10.github.io/aboutMePersonal">About Me (Personal)</a>&nbsp;&nbsp;&nbsp;&nbsp;
 		        <a href="https://ltw10.github.io/aboutMeProfessional">About Me (Professional)</a></p>
 		        <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-          	<h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+          		<h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+			<h2>Luke Williams<br /></h2>
 		        <h2> University of Kentucky Class of 2023 Computer Science </h2>
         </header>
  
