--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 		<br /><br /><br /><br /><br /><br />
 		<h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
           	<h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-		<h2> University of Kentucky Class of 2023 Computer Science </h2>
+		<h2> University of Kentucky Class of 2023 <br /> Computer Science </h2>
 		
 	</header>
 		
