--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -37,6 +37,7 @@
         </section>
 
         <footer>
+	<p><a href="ltw10.github.io/projects/">Back to Projects</a></p>
         {% if site.github.is_project_page %}
           {{ site.title | default: site.github.repository_name }} is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a><br>
         {% endif %}
