--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -37,7 +37,7 @@
         </section>
 
         <footer>
-	<h4><a href="https://ltw10.github.io/projects/">Back to Projects</a></h4>
+	<h4><a href="https://ltw10.github.io/projects/" style="color:red;">Back to Projects</a></h4>
         {% if site.github.is_project_page %}
           {{ site.title | default: site.github.repository_name }} is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a><br>
         {% endif %}
