--- a/_layouts/aboutMeProfessional.html
+++ b/_layouts/aboutMeProfessional.html
@@ -35,7 +35,7 @@
         </section>
 
         <footer>
-	<p><a href="https://ltw10.github.io">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ltw10.github.io/aboutMeProfessional">Top of the Page</a></p>
+	<h4><a href="https://ltw10.github.io" style="color:red;">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ltw10.github.io/aboutMeProfessional" style="color:red;">Top of the Page</a></h4>
         {% if site.github.is_project_page %}
           {{ site.title | default: site.github.repository_name }} is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a><br>
         {% endif %}
