--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 		<a href="https://ltw10.github.io" class="button">Home</a>
 		<a href="https://ltw10.github.io/projects" class="button">Projects</a>
 		<a href="https://ltw10.github.io/aboutMePersonal" class="button">About Me (Personal)</a>
-		<a href="https://ltw10.github.io/aboutMeProfessional" class="button">About Me (Professional)</a>
+		<a href="https://ltw10.github.io/aboutMeProfessional" class="button">About Me (Professional)</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<br /><br /><br /><br /><br /><br />
 		<h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
           	<h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
